Fixed bug with transform on safari

--- a/styles/sass/utilities/_animations.scss
+++ b/styles/sass/utilities/_animations.scss
@@ -31,15 +31,19 @@
 @keyframes kv-hero-popup {
     0% {
         transform: scale(0.5);
+        -webkit-transform:scale(0.5);
     }
     50% {
         transform: scale(1.1);
+        -webkit-transform:scale(1.1);
     }
     75% {
         transform: scale(0.9);
+        -webkit-transform:scale(0.9);
     }
     100% {
         transform: scale(1);
+        -webkit-transform:scale(1);
     }
 }
 
